kubernetes/category-db.yaml
# Define a Kubernetes Service object for the MySQL database
apiVersion: v1
kind: Service
metadata:
  # Name of the Service object
  name: category-db
  # Labels to associate with this service, used for organizing and selecting subsets
  labels:
    app: category-db
spec:
  # Define the ports and protocols used by this service
  ports:
    - port: 3308  # The port that the service exposes
      name: mysql-port  # An identifiable name for the port
  clusterIP: None  # Setting this to None deploys the service as a Headless Service
  selector:
    app: category-db  # Selects pods with labels matching this value

---
# Define a StatefulSet for managing stateful applications, here used for MySQL
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # Name of the StatefulSet
  name: category-db
spec:
  # The serviceName that pods use to access the database
  serviceName: "category-db"
  # Number of desired replicas
  replicas: 1
  selector:
    matchLabels:
      app: category-db  # Ensures the StatefulSet manages pods labeled with 'category-db'
  template:
    metadata:
      labels:
        app: category-db  # Labels assigned to all pods created from this template
    spec:
      containers:
        - name: category-db  # Name of the container
          image: distributed-systems-category-db  # The Docker image to use
          imagePullPolicy: Never  # Do not pull the image if it's already present
          ports:
            - containerPort: 3308  # The port that the container exposes
              name: mysql-port
      volumes:
        - name: mysql-persistent-storage  # Name of the volume for persistent storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim  # PersistentVolumeClaim that the volume uses
