kubernetes/category-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: category
spec:
  replicas: 1
  selector:
    matchLabels:
      app: category
  template:
    metadata:
      labels:
        app: category
    spec:
      containers:
        - name: category
          image: distributed-systems-category
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: category-port

---
apiVersion: v1
kind: Service
metadata:
  name: category
  labels:
    app: category
spec:
  ports:
    - port: 8080
      name: category-port
  clusterIP: None
  selector:
    app: category
