kubernetes/product-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: distributed-systems-product
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
              name: product-port

---
apiVersion: v1
kind: Service
metadata:
  name: product
  labels:
    app: product
spec:
  ports:
    - port: 8081
      name: product-port
  clusterIP: None
  selector:
    app: product
