kubernetes/webshop-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-shop-db-image
  labels:
    app: webshop-db
spec:
  ports:
    - port: 3306
      name: mysql-port
  clusterIP: None
  selector:
    app: webshop-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: webshop-db
spec:
  serviceName: "webshop-db"
  replicas: 1
  selector:
    matchLabels:
      app: webshop-db
  template:
    metadata:
      labels:
        app: webshop-db
    spec:
      containers:
        - name: webshop-db
          image: distributed-systems-web-shop-db-image
          imagePullPolicy: Never
          ports:
            - containerPort: 3306
              name: mysql-port
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
