kubernetes/webshop-ms.yaml
apiVersion: v1
kind: Service
metadata:
  name: webshop-ms
  labels:
    app: webshop-ms
spec:
  ports:
    - port: 8080
      name: webshop-ms
      targetPort: 8080
  clusterIP: None
  selector:
    app: webshop-ms
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webshop-ms
  labels:
    app: webshop-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webshop-ms
  template:
    metadata:
      labels:
        app: webshop-ms
    spec:
      containers:
        - name: webshop-ms
          image: distributed-systems-legacywebshop
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
              name: webshop-port
